# embedded_sandbox

./: .gitignore  README.md  setup.sh
micro/circular_buffer/: to_check.txt
micro/circular_buffer/embedded_artistry/: README.md
micro/circular_buffer/mastering_stm32/: CMakeLists.txt  README.md
micro/circular_buffer/mastering_stm32/main/: CMakeLists.txt  main_ringbuffer.c
micro/circular_buffer/mastering_stm32/ringbuffer/: CMakeLists.txt  ringbuffer.c  ringbuffer.h
micro/circular_buffer/mastering_stm32/test/: CMakeLists.txt  test_ringbuffer_unity.c
